burgericon = id instead of class burgericon = transform + transition!

--- a/cc02.css
+++ b/cc02.css
@@ -20,7 +20,7 @@ body {
   position: fixed;
   top: 0px;
   /*border: 2px solid black; /*Debug*/
-  padding: 10px;
+  padding: 10px 35px 10px 35px;
 }
 
 .cname {
