--- a/cc021.css
+++ b/cc021.css
@@ -6,8 +6,8 @@
 
 body {
   background-color: #FFFF99;
-  height: 1500px;
   font-size: 25px;
+  font-family: "Abel", sans-serif;
 }
 
 img { max-width: 100%; }
@@ -22,7 +22,10 @@ img { max-width: 100%; }
   position: fixed;
   top: 0px;
   padding: 10px 35px 10px 35px;
+  z-index: 5
 }
+
+
 
 .cname {
   display: flex;
@@ -40,10 +43,9 @@ img { max-width: 100%; }
   max-width: 50px;
   max-height: 50px;
   display: flex;
-  border: 5px solid red;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
+  align-self: center;
 }
 
 #bicon {
@@ -51,25 +53,34 @@ img { max-width: 100%; }
   width: 100%;
   height: 100%;
   transition: transform 1s;
-  border: 5px solid blue;
-  z-index: 5;
 }
 
 #bicon:hover {
   transform: rotate(-90deg);
 }
 
-.bread-c {
+.grid-container {
   display: flex;
-  border: 2px solid gray;
-  position: relative;
-  top: 100px;
-  overflow: hidden;
-  z-index: -1;
+  justify-content: center;
+  align-self: center;
+  margin-top: 10%;
+  height: auto;
 }
 
-.bread {
+.grid {
+  width: auto;
   display: flex;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  align-items: center;
+}
+
+.grid-item {
+  display: flex;
+  border: 1px solid #fff;
+  width: 300px;
+  height: 500px;
 }
 
 .header {
@@ -78,7 +89,6 @@ img { max-width: 100%; }
   position: fixed;
   bottom: 0;
   left: 40%;
-  border: 5px solid red;
 }
 
 .logo {
