--- a/cc03.css
+++ b/cc03.css
@@ -4,28 +4,80 @@
   box-sizing: border-box;
 }
 
+/* Mobile Styles */
+@media only screen and (max-width: 400px) {
+  body {
+    background-color: #F09A9D; /* Red */
+  }
+}
+
+/* Tablet Styles */
+@media only screen and (min-width: 401px) and (max-width: 960px) {
+  body {
+    background-color: #F5CF8E; /* Yellow */
+  }
+}
+
+/* Desktop Styles */
+@media only screen and (min-width: 961px) {
+  body {
+    background-color: #B2D6FF; /* Blue */
+  }
+}
+
 body {
 
 }
 
 img {max-width: 100%}
 
+.page {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.section {
+  width: 100%;
+  height: 300px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .menu {
   background-color: #36454f;
-  height: auto;
-  width: 100%;
+  height: 80px;
+}
+
+.header {
+  background-color: #FFFF99;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+
+.header img {
+  max-height: 100%;
+  display: block;
+}
+
+.content {
+  background-color: #EAEDF0;
+  height: 600px;
+}
+
+/*by.Me*/
+
+.menu {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
-  position: fixed;
-  top: 0px;
   padding: 10px 35px 10px 35px;
-  z-index: 5
 }
 
 .cname {
   display: flex;
-  font-size: 2em;
+  font-size: 3.9em;
   font-family: "Roboto", sans-serif;
   font-weight: 100;
   color: #FFFF99;
