--- a/test.css
+++ b/test.css
@@ -85,7 +85,7 @@ img {max-width: 100%;}
   height: 50vh;
   border: 5px solid #0d36454f;
   border-radius: 5px;
-margin: 25px;
+  margin: 25px;
   padding: 15px;
 }
 
@@ -145,6 +145,6 @@ margin: 25px;
 }
 
 /* Change the background color of the dropdown button when the dropdown content is shown */
-.dropdown:hover .dropbtn {
-  background-color: #3e8e41;
+.dropdown:hover .bicon {
+  transform: rotate(-90deg);
 }
