--- a/testm.css
+++ b/testm.css
@@ -14,6 +14,8 @@ img {max-width: 100%;}
 }
 
 .top-c {
+  position: fixed;
+  top: 0;
   display: flex;
   background-color: #36454f;
   height: 15vh;
@@ -73,14 +75,17 @@ img {max-width: 100%;}
 
 .main-c {
   display: flex;
+  align-self: center;
   width: 100%;
   background-image: linear-gradient(#FFFF99, #da8a67);
   height: 70vh;
   border: 2px solid green;
 }
 
+
 .main {
   display: flex;
+  flex-wrap: wrap;
   justify-content: space-around;
   align-items: center;
 
@@ -96,6 +101,8 @@ img {max-width: 100%;}
 
 
 .bottom-c {
+  position: fixed;
+  bottom: 0;
   width: 100%;
   height: 15vh;
   border: 2px solid yellow;
@@ -103,21 +110,30 @@ img {max-width: 100%;}
 
 .bottom {
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   justify-content: center;
   background-color: #da8a67;
   border: 2px solid red;
   height: 15vh;
+  width: 100%;
+}
+
+.logo-c {
+  display: flex;
+  border: 2px solid black;
+  height: 100%;
+  width: 100%;
+  justify-content: center;
 }
 
 .logo {
-  display: flex;
-  width: 25vw;
-  height: auto;
-  margin: 25px;
+  display: block;
+  width: auto;
+  height: 100%;
   border: 2px solid green;
-
 }
+
+
 
 .dropdown {
   position: relative;
